Added base conversion
You can now convert bases, and you can remove a variable from an environment